# grpc-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
proto/: MediaTransfer.proto
src/: MediaTransfer.rs  MediaTransfer_grpc.rs  args.rs  lib.rs  log.rs  macros.rs  main.rs  response.rs  server.rs  version.rs
