[package]
name = "grpc-rs"
version = "0.1.0"
authors = ["luyue <544625106@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "2"
grpc = "0.7.1"
grpc-protobuf = "0.7.1"
futures = "0.3.*"
tls-api = "0.3.*"
lazy_static = "1.4.0"
chrono = "0.4"
serde_json = "1.0"

[build-dependencies]
protoc-rust-grpc = "0.7.1"