[package]
name = "grpc-rs"
version = "0.1.0"
authors = ["luyue <544625106@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "full"] }
serde_json = "1.0.104"
once_cell = "1.18.0"
chrono = "0.4.26"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
tonic-build = "0.9"
